--- a/index.html
+++ b/index.html
@@ -197,6 +197,217 @@
                 </ul>
             </div>
         </section>
+        <!-- AUTHOR -->
+        <section class="author">
+            <div class="container author__container">
+                <img src="./images/grandparents.png" alt="grandparents" width="545" height="640">
+
+                <div class="author__right">
+                    <h3 class="author__right-heading">
+                        About the Author
+                    </h3>
+
+                    <span class="author__right-span"></span>
+
+                    <p class="author__right-desc">
+                        We believe that bookstores are essential to a healthy culture. They’re where authors can connect with readers, where we discover new writers, where children get hooked on the thrill of reading that can last a lifetime.
+                    </p>
+
+                    <ul class="author__right-list list-unstyled">
+                        <li class="author__right-item">
+                            <div class="author__right-list-desc-wrapper">
+                                <p class="author__right-list-desc-number">
+                                    02
+                                </p>
+
+                                <p class="author__right-list-desc">
+                                    Books Published
+                                </p>
+                            </div>
+
+                            <span class="author__right-list-span"></span>
+                        </li>
+
+                        <li class="author__right-item">
+                            <div class="author__right-list-desc-wrapper">
+                                <p class="author__right-list-desc-number">
+                                    4.5
+                                </p>
+
+                                <p class="author__right-list-desc">
+                                    User Reviews
+                                </p>
+                            </div>
+
+                            <span class="author__right-list-span"></span>
+                        </li>
+
+                        <li class="author__right-item">
+                            <div class="author__right-list-desc-wrapper">
+                                <p class="author__right-list-desc-number">
+                                    04
+                                </p>
+
+                                <p class="author__right-list-desc">
+                                    Best Seller Awards
+                                </p>
+                            </div>
+
+                        </li>
+                    </ul>
+
+                    <div class="author__right-man">
+                        <img src="./images/qr-kod.png" alt="qrkod" width="130" height="130">
+
+                        <div class="author__right-man-john">
+                            <p class="author__right-man-john-desc-name">
+                                John Abraham , Ph.d
+                            </p>
+
+                            <p class="author__right-man-john-desc-email">
+                                Mail:
+                                johnabraham@gmail.com
+                            </p>
+
+                            <p class="author__right-man-john-desc-phone">
+                                Phone:
+                                (+2) 123 545 9000
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- TRUST -->
+        <section class="trust">
+            <div class="container trust__container">
+                <h2 class="trust__heading">
+                    Trusted By The Best
+                </h2>
+                <div class="trust__line"></div>
+
+                <ul class="trust__list list-unstyled d-flex justify-content-between">
+                    <li class="trust__item">
+                        <img src="./images/amazen.png" alt="amazen" width="189" height="100">
+
+                        <h3 class="trust__list-heading">
+                            Amazen Corp.
+                        </h3>
+
+                        <p class="trust__list-desc">
+                            They has been helping readers, music lovers, and videophiles find quality material.
+                        </p>
+                    </li>
+
+                    <li class="trust__item">
+                        <img src="./images/megan.png" alt="amazen" width="189" height="100">
+
+                        <h3 class="trust__list-heading">
+                            Megan Books.
+                        </h3>
+
+                        <p class="trust__list-desc">
+                            We help physical bookstores manage their overstock to the book inventory.
+                        </p>
+                    </li>
+
+                    <li class="trust__item trust__item-margin-last">
+                        <img src="./images/megank.png" alt="amazen" width="189" height="100">
+
+                        <h3 class="trust__list-heading">
+                            Megank
+                        </h3>
+
+                        <p class="trust__list-desc">
+                            Bookstore serving up the full spectrum of Black literature and wine black books.
+                        </p>
+                    </li>
+
+                    <li class="trust__item trust__item-margin">
+                        <img src="./images/urban.png" alt="amazen" width="189" height="100">
+
+                        <h3 class="trust__list-heading">
+                            Urban Store
+                        </h3>
+
+                        <p class="trust__list-desc">
+                            We also carry the latest records, issues of all of your favorite comic books.
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!-- COPY -->
+        <section class="copy">
+            <div class="container copy__container">
+                <div class="copy__left">
+                    <h3 class="copy__heading">
+                        Get Book Copy Today!
+                    </h3>
+
+                    <div class="copy__span"></div>
+
+                    <p class="copy__desc">
+                        We believe that bookstores are essential to a healthy culture. They’re where authors can connect with readers.
+                    </p>
+
+                    <a class="copy__btn text-decoration-none" href="#">
+                        Order Today
+                    </a>
+                </div>
+
+                <img src="./images/flower.png" alt="flower" width="560" height="394">
+            </div>
+        </section>
+
+        <section class=learn>
+            <div class="container learn__container">
+                <div class="learn__top d-flex flex-column justify-content-center align-items-center">
+                    <h3 class="learn__heading">
+                        What Will You Learn?
+                    </h3>
+                    <div class="learn__line"></div>
+                </div>
+
+               <nav class="learn__nav">
+                <ul class="learn__list list-unstyled">
+                    <li class="learn__item">
+                        <img src="./images/first.png" alt="first" width="50" height="50">
+
+                        <p class="learn__list-desc">
+                            Use HDFS & Map Reduce for storing & analyzing data at scale.
+                        </p>
+                    </li>
+
+                    <li class="learn__item">
+                        <img src="./images/second.png" alt="first" width="50" height="50">
+
+                        <p class="learn__list-desc">
+                            Consume streaming data using Spark Streaming, Flink, and Storm.
+                        </p>
+                    </li>
+
+                    <li class="learn__item">
+                        <img src="./images/third.png" alt="first" width="50" height="50">
+
+                        <p class="learn__list-desc">
+                            Choose an appropriate data storage technology for your application
+                        </p>
+                    </li>
+
+                    <li class="learn__item">
+                        <img src="./images/fourth.png" alt="first" width="50" height="50">
+
+                        <p class="learn__list-desc">
+                            Analyze non-relational data using HBase, Cassandra, and MongoDB.
+                        </p>
+                    </li>
+                </ul>
+
+                <img src="./images/book-woman.png" alt="book" width="555" height="652">
+               </nav>
+            </div>
+        </section>
     </main>
     <!-- FOOTER -->
     <footer class="footer">
