--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                 <img src="./images/flower.png" alt="flower" width="560" height="394">
             </div>
         </section>
-
+        <!-- LEARN -->
         <section class=learn>
             <div class="container learn__container">
                 <div class="learn__top d-flex flex-column justify-content-center align-items-center">
@@ -406,6 +406,158 @@
 
                 <img src="./images/book-woman.png" alt="book" width="555" height="652">
                </nav>
+            </div>
+        </section>
+        <!-- VISION -->
+        <section class="vision">
+            <div class="container">
+                <div class="vision__top d-flex flex-column justify-content-center align-items-center">
+                    <h2 class="vision__heading">
+                        Enhance knowledge & Vision
+                    </h2>
+
+                    <div class="vision__line"></div>
+                </div>
+
+                <ul class="vision__list list-unstyled">
+                    <li class="vision__item">
+                        <h3 class="vision__list-heading">
+                            Chapter-1 Get Started Intro
+                        </h3>
+
+                        <p class="vision__list-desc">
+                            You can double your knowledge by reading this ever needed book that can last a lifetime.
+                        </p>
+
+                        <ul class="vision__inner-list list-unstyled">
+                            <li class="vision__inner-item">
+                                <p class="vision__inner-desc">
+                                    Pages :
+                                </p>
+
+                                <p class="vision__inner-desc-small">
+                                    250pages
+                                </p>
+                            </li>
+
+                            <li class="vision__inner-item">
+                                <p class="vision__inner-desc">
+                                    Length :
+                                </p>
+
+                                <p class="vision__inner-desc-small">
+                                    2 Hours
+                                </p>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li class="vision__item">
+                        <h3 class="vision__list-heading">
+                            Chapter-2 The Roman Culture
+                        </h3>
+
+                        <p class="vision__list-desc">
+                            It will help to improve your life career with the perfect and needed knowledge about your life.
+                        </p>
+
+                        <ul class="vision__inner-list list-unstyled">
+                            <li class="vision__inner-item">
+                                <p class="vision__inner-desc">
+                                    Pages :
+                                </p>
+
+                                <p class="vision__inner-desc-small">
+                                    180pages
+                                </p>
+                            </li>
+
+                            <li class="vision__inner-item">
+                                <p class="vision__inner-desc">
+                                    Length :
+                                </p>
+
+                                <p class="vision__inner-desc-small">
+                                    3 Hours
+                                </p>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li class="vision__item">
+                        <h3 class="vision__list-heading">
+                            Chapter-3 How They Servived
+                        </h3>
+
+                        <p class="vision__list-desc">
+                            We wanted to create an easy, convenient way for you to get your books & support.
+                        </p>
+
+                        <ul class="vision__inner-list list-unstyled">
+                            <li class="vision__inner-item">
+                                <p class="vision__inner-desc">
+                                    Pages :
+                                </p>
+
+                                <p class="vision__inner-desc-small">
+                                    250pages
+                                </p>
+                            </li>
+
+                            <li class="vision__inner-item">
+                                <p class="vision__inner-desc">
+                                    Length :
+                                </p>
+
+                                <p class="vision__inner-desc-small">
+                                    4 Hours
+                                </p>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li class="vision__item">
+                        <h3 class="vision__list-heading">
+                            Chapter-4 The End Of Romans
+                        </h3>
+
+                        <p class="vision__list-desc">
+                            Promote your book via Pages shop to support your writing & reading career.
+                        </p>
+
+                        <ul class="vision__inner-list list-unstyled">
+                            <li class="vision__inner-item">
+                                <p class="vision__inner-desc">
+                                    Pages :
+                                </p>
+
+                                <p class="vision__inner-desc-small">
+                                    175pages
+                                </p>
+                            </li>
+
+                            <li class="vision__inner-item">
+                                <p class="vision__inner-desc">
+                                    Length :
+                                </p>
+
+                                <p class="vision__inner-desc-small">
+                                    3 Hours
+                                </p>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+
+                <div class="vision__bottom">
+                    <a class="vision__btn text-decoration-none" href="#">
+                        Start a 15-Days Free Trail
+                    </a>
+
+                    <p class="vision__bottom-desc">
+                        Short description about each chapter <a class="vision__bottom-desc-link text-decoration-none" href="#">Have any questions?</a> Contact us
+                    </p>
+                </div>
             </div>
         </section>
     </main>
