feat: reders secction

--- a/index.html
+++ b/index.html
@@ -369,43 +369,43 @@
                     <div class="learn__line"></div>
                 </div>
 
-               <nav class="learn__nav">
-                <ul class="learn__list list-unstyled">
-                    <li class="learn__item">
-                        <img src="./images/first.png" alt="first" width="50" height="50">
+                <nav class="learn__nav">
+                    <ul class="learn__list list-unstyled">
+                        <li class="learn__item">
+                            <img src="./images/first.png" alt="first" width="50" height="50">
 
-                        <p class="learn__list-desc">
-                            Use HDFS & Map Reduce for storing & analyzing data at scale.
-                        </p>
-                    </li>
+                            <p class="learn__list-desc">
+                                Use HDFS & Map Reduce for storing & analyzing data at scale.
+                            </p>
+                        </li>
 
-                    <li class="learn__item">
-                        <img src="./images/second.png" alt="first" width="50" height="50">
+                        <li class="learn__item">
+                            <img src="./images/second.png" alt="first" width="50" height="50">
 
-                        <p class="learn__list-desc">
-                            Consume streaming data using Spark Streaming, Flink, and Storm.
-                        </p>
-                    </li>
+                            <p class="learn__list-desc">
+                                Consume streaming data using Spark Streaming, Flink, and Storm.
+                            </p>
+                        </li>
 
-                    <li class="learn__item">
-                        <img src="./images/third.png" alt="first" width="50" height="50">
+                        <li class="learn__item">
+                            <img src="./images/third.png" alt="first" width="50" height="50">
 
-                        <p class="learn__list-desc">
-                            Choose an appropriate data storage technology for your application
-                        </p>
-                    </li>
+                            <p class="learn__list-desc">
+                                Choose an appropriate data storage technology for your application
+                            </p>
+                        </li>
 
-                    <li class="learn__item">
-                        <img src="./images/fourth.png" alt="first" width="50" height="50">
+                        <li class="learn__item">
+                            <img src="./images/fourth.png" alt="first" width="50" height="50">
 
-                        <p class="learn__list-desc">
-                            Analyze non-relational data using HBase, Cassandra, and MongoDB.
-                        </p>
-                    </li>
-                </ul>
+                            <p class="learn__list-desc">
+                                Analyze non-relational data using HBase, Cassandra, and MongoDB.
+                            </p>
+                        </li>
+                    </ul>
 
-                <img src="./images/book-woman.png" alt="book" width="555" height="652">
-               </nav>
+                    <img src="./images/book-woman.png" alt="book" width="555" height="652">
+                </nav>
             </div>
         </section>
         <!-- VISION -->
@@ -558,6 +558,99 @@
                         Short description about each chapter <a class="vision__bottom-desc-link text-decoration-none" href="#">Have any questions?</a> Contact us
                     </p>
                 </div>
+            </div>
+        </section>
+        <!-- REDERS -->
+        <section class="reders">
+            <div class="container reders__container">
+                <div class="reders__left">
+                    <h1 class="reders__heading">
+                        Words From Our Readers
+                    </h1>
+
+                    <div class="reders__line"></div>
+
+                    <p class="reders__desc">
+                        We believe that bookstores are essential to a healthy culture. They’re where authors can connect with readers, where we discover new writers, where children get hooked on the thrill of reading that can last a lifetime.
+                    </p>
+
+                    <div class="reders__line-wrapper">
+                        <img src="./images/yellow.png" alt="yellow-line" width="120" height="20">
+
+                        <span class="reders__line-span">
+                            (4.8/5)
+                        </span>
+                    </div>
+
+                    <p class="reders__desc-small">
+                        Overall Customer Ratings
+                    </p>
+                </div>
+
+                <ul class="reders__list list-unstyled">
+                    <li class="reders__item">
+                        <div class="reders__list-top">
+                            <img src="./images/man.png" alt="man" width="85" height="85">
+
+                            <div class="reders__list-top-text-wrapper">
+                                <h2 class="reders__list-top-heading">
+                                    James Williams
+                                </h2>
+                                <img src="./images/yellow.png" alt="yellow" width="76" height="13">
+                            </div>
+                        </div>
+
+                        <h2 class="reders__list-heading">
+                            “ Great Books Collections ”
+                        </h2>
+
+                        <p class="reders__list-desc">
+                            I was searching this book for many years and I was happy that I could find it here.
+                        </p>
+                    </li>
+
+                    <li class="reders__item">
+                        <div class="reders__list-top">
+                            <img src="./images/angelina.png" alt="man" width="85" height="85">
+
+                            <div class="reders__list-top-text-wrapper">
+                                <h2 class="reders__list-top-heading">
+                                    Angeline Flora
+                                </h2>
+                                <img src="./images/yellow.png" alt="yellow" width="76" height="13">
+                            </div>
+                        </div>
+
+                        <h2 class="reders__list-heading">
+                            “ Creative Writing Skill”
+                        </h2>
+
+                        <p class="reders__list-desc">
+                            Sent an email after to books arrived to ask about the author & I received a reply.
+                        </p>
+                    </li>
+
+                    <li class="reders__item">
+                        <div class="reders__list-top">
+                            <img src="./images/chris.png" alt="man" width="85" height="85">
+
+                            <div class="reders__list-top-text-wrapper">
+                                <h2 class="reders__list-top-heading">
+                                    Chris Adams
+                                </h2>
+                                <img src="./images/yellow.png" alt="yellow" width="76" height="13">
+                            </div>
+                        </div>
+
+                        <h2 class="reders__list-heading">
+                            “ Perfect Response Author”
+                        </h2>
+
+                        <p class="reders__list-desc">
+                            I had a question about the book and the author response was great & comfort.
+                        </p>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
