feat: section articles

--- a/index.html
+++ b/index.html
@@ -653,6 +653,92 @@
                 </ul>
             </div>
         </section>
+        <!-- ARICLES -->
+        <section class="articles">
+            <div class="container">
+                <div class="articles__top">
+                    <h1 class="articles__heading">
+                        Articles & Resources
+                    </h1>
+
+                    <div class="articles__line"></div>
+                </div>
+
+                <ul class="articles__list list-unstyled">
+                    <li class="articles__item">
+                        <img src="./images/macbook.png" alt="macbook" width="420" height="350">
+
+                        <div class="articles__list-text-wrapper">
+                            <h3 class="articles__list-heading">
+                                Significant reading has more info number
+                            </h3>
+
+                            <p class="articles__list-desc">
+                                Override the digital divide with additional clickthroughs from DevOps for real-time schemas.
+                            </p>
+
+                            <div class="articles__list-bottom">
+                                <button class="articles__list-btn">
+                                    Readmore
+                                </button>
+
+                                <p class="articles__list-data">
+                                    October 6, 2021
+                                </p>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="articles__item">
+                        <img src="./images/dog.png" alt="macbook" width="420" height="350">
+
+                        <div class="articles__list-text-wrapper">
+                            <h3 class="articles__list-heading">
+                                Many variations of pass majority have suffered
+                            </h3>
+
+                            <p class="articles__list-desc">
+                                Capitalize on low-hanging fruit to identify a ballpark value-added activity to beta test.
+                            </p>
+
+                            <div class="articles__list-bottom">
+                                <button class="articles__list-btn">
+                                    Readmore
+                                </button>
+
+                                <p class="articles__list-data">
+                                    October 6, 2021
+                                </p>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="articles__item">
+                        <img src="./images/blackman.png" alt="macbook" width="420" height="350">
+
+                        <div class="articles__list-text-wrapper">
+                            <h3 class="articles__list-heading">
+                                Words which don’t look even slightly believable
+                            </h3>
+
+                            <p class="articles__list-desc">
+                                Podcasting operational change management inside of workflows to establish a framework.
+                            </p>
+
+                            <div class="articles__list-bottom">
+                                <button class="articles__list-btn">
+                                    Readmore
+                                </button>
+
+                                <p class="articles__list-data">
+                                    October 6, 2021
+                                </p>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     <!-- FOOTER -->
     <footer class="footer">
