feat: section uptade

--- a/index.html
+++ b/index.html
@@ -739,6 +739,28 @@
                 </ul>
             </div>
         </section>
+        <!-- UPDATES -->
+        <section class="uptade">
+            <div class="container uptade__container">
+                <div class="uptade__top">
+                    <h2 class="uptade__heading">
+                        Get The Best Updates
+                    </h2>
+
+                    <div class="uptade__line"></div>
+
+                    <p class="uptade__desc">
+                        Subscribe with your mail id to know the current update in book edition at your fingertip with in a minute.
+                    </p>
+                </div>
+
+                <form action="post" class="uptade__form">
+                    <input type="email" class="uptade__input" placeholder="Your Email ID..." required name="user__email">
+
+                    <button class="uptade__btn">Subscribe</button>
+                </form>
+            </div>
+        </section>
     </main>
     <!-- FOOTER -->
     <footer class="footer">
